# ComfyUI-Custom-Scripts

./: .gitignore  README.md  __init__.py  install.py  pyproject.toml  pysssss.py
anime-segmentation/: README.md  anime_segmentation.py
auto-arrange-graph/: graphArrange.js
export-workflow-svg/: exportAsSvg.js
favicon-status/: faviconStatus.js
follow-execution/: followExecution.js
image-feed/: imageFeed.js
invert-menu-scrolling/: invertMenuScrolling.js
js/: betterCombos.js  contextMenuHook.js  customColors.js  exportAsSvg.js  faviconStatus.js  graphArrange.js  imageFeed.js  kSamplerAdvDenoise.js  linkRenderMode.js  locking.js  loraInfo.css  loraInfo.js  loraLoader.js  loraSubfolders.js  mathExpression.js  playSound.js  presetText.js  quickNodes.js  reroutePrimitive.js  showImageOnMenu.js  showText.js  snapToGrid.js  stringFunction.js  touchEvents.js  widgetDefaults.js  workflowImage.js  workflows.js
latent-upscale-by/: latent_upscale_by.py
lock-nodes-and-groups/: README.md  locking.js
lora-subfolders/: README.md  loraSubfolders.js
node-finder/: nodeFinder.js
node-templates/: nodeTemplates.js
play-audio/: playAudio.js
preset-text/: README.md  presetText.js
preview-image/: notes.txt  preview_image.py
py/: autocomplete.py  better_combos.py  constrain_image.py  increment.py  lora_info.py  lora_loader.py  mathExpression.py  math_expression.py  model_info.py  play_sound.py  reroute_primitive.py  show_text.py  string_function.py  system_notification.py  text_files.py  workflows.py
quick-nodes/: quickNodes.js
saveimage-extra-output/: README.md  saveImageExtraOutput.js
show-text/: showText.js  show_text.py
sticky-note/: stickyNote.js
tome-patcher/: LICENSE  README.md  tome_patcher.py
touch-support/: touchEvents.js
upload-image/: notes.txt  uploadImage.js  (+1 more)
(+44 files in other folders)
