[project]
name = "comfyui-custom-scripts"
description = "Enhancements & experiments for ComfyUI, mostly focusing on UI features"
version = "1.1.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/pythongosssss/ComfyUI-Custom-Scripts"

[tool.comfy]
PublisherId = "pythongosssss"
DisplayName = "ComfyUI-Custom-Scripts"
Icon = ""
